--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "async-handler": "^0.0.3",
     "colors": "^1.4.0",
     "connect-mongodb-session": "^3.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
